travis用ファイル,composer.lock追加。

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "components/jquery":      "~2.1"
     },
     "require-dev": {
+        "ryu818/html-purifier":   "dev-master",
+        "ryu818/tiny-mce":        "dev-master",
         "satooshi/php-coveralls": "dev-master"
     },
     "license": "NetCommons License",
@@ -19,7 +21,6 @@
             "homepage": "https://github.com/NetCommons3/Revision/graphs/contributors"
         }
     ],
-    "minimum-stability": "dev",
     "type":        "cakephp-plugin",
     "keywords":    ["cakephp", "revision"],
     "config": {
