--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         "components/jquery":      "~2.1"
     },
     "require-dev": {
-        "ryu818/html-purifier":   "dev-master",
-        "ryu818/tiny-mce":        "dev-master",
-        "satooshi/php-coveralls": "dev-master"
+        "ryu818/html-purifier":         "dev-master",
+        "netcommons/rich-text-editor":  "dev-master",
+        "satooshi/php-coveralls":       "dev-master"
     },
     "license": "NetCommons License",
     "authors": [
