--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,11 @@
     "name": "netcommons/revision",
     "description": "Revision Plugin for Cakephp",
     "homepage": "http://www.netcommons.org/",
+    "extra": {
+        "installer-paths": {
+            "app/Plugin/{$name}": ["type:cakephp-plugin"]
+        }
+    },
     "require": {
         "cakephp/cakephp":        "~2.4",
         "cakephp/debug_kit":      "~2.2",
@@ -10,6 +15,7 @@
         "components/jquery":      "~2.1"
     },
     "require-dev": {
+        "mustangostang/spyc":           "dev-master",
         "satooshi/php-coveralls":       "dev-master"
     },
     "license": "NetCommons License",
